--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>reference website</title>
+    <title>Reference website</title>
 </head>
 <body>
     
 </body>
 </html>
+
+<main>
+    <section class="part1">
+    <div>
+<h2> Part 1 </h2>
+    </div>
+    </section>
+
+    <section id="Part 1" class="part 1">
+
+<h1> Header h1</h1>
+<h2>Header h2</h2>
+<h3>Header h3</h3>
+<h4>Header h4</h4>
+<h5>Header h5</h5>
+<h6>Header h6</h6>
+
+<p>Paragraph = p </p>
+
+<h3>Lists</h3>
+<p>unroganised list = ul </p>
+<p>organised list = ol </p>
+<p>description list = dl</p>
+
+<p> a = link (creates hyperlinks) 
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link here</a>
+</p>
+
+<p>to add image write = img src (example)</p>
+img src=""
+
+</section>
+</main>
