--- a/index.html
+++ b/index.html
@@ -11,35 +11,87 @@
 </body>
 </html>
 
+<header>
+add header here ***
+
+</header>
+
 <main>
     <section class="part1">
     <div>
-<h2> Part 1 </h2>
+    <h2> HTML tags and elements </h2>
     </div>
     </section>
 
     <section id="Part 1" class="part 1">
 
-<h1> Header h1</h1>
-<h2>Header h2</h2>
-<h3>Header h3</h3>
-<h4>Header h4</h4>
-<h5>Header h5</h5>
-<h6>Header h6</h6>
+        <h1> Header h1</h1>
+        <h2>Header h2</h2>
+        <h3>Header h3</h3>
+        <h4>Header h4</h4>
+        <h5>Header h5</h5>
+        <h6>Header h6</h6>
 
-<p>Paragraph = p </p>
+        <p>Paragraph = p </p>
 
-<h3>Lists</h3>
-<p>unroganised list = ul </p>
-<p>organised list = ol </p>
-<p>description list = dl</p>
+        <h3>Lists</h3>
+        <p>unroganised list = ul </p>
+        <p>organised list = ol </p>
+        <p>description list = dl</p>
 
-<p> a = link (creates hyperlinks) 
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link here</a>
-</p>
+        <p> a = link (creates hyperlinks)</p> 
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link here</a>
+       
 
-<p>to add image write = img src (example)</p>
-img src=""
+        <p>to add image write = img src (example)</p>
+        <img src="https://pbs.twimg.com/media/EX6d6keXsAERKzT.jpg" alt="one eye mike"/>
 
-</section>
+        <h3>Quotes</h3>
+        <q>"quote here"</q>
+        <blockquote>"blockquote here"</blockquote>
+        <cite>cite here</cite>
+
+        <p><em>emphasise = important words italic</em></p>
+        <p> <strong> strong = very important words bold</strong></p>
+        <p><b>keywords</b></p>
+        <p><i>italisize = another language, techincal term, book/movie title </i></p>
+        <p><small>small</small></p>
+    </section>
+
+    <section class="part 2">
+        <div>
+        <h3> Body structure </h3>
+        </div>
+        </section>
+
+        <section id="Part 2" class="part 2">
+           <p>Header = section main elements </p>
+           <p>Footer = end page elements at bottom</p>
+           <p>main = elements wrap around main (only 1 per page)</p>
+           <p>section = wrap around related pieces of content with own heading</p>
+           <p> article = self contained element in web page</p>
+           <p> nav = navigation link section </p>
+           <ul>
+            <li><a href="#Part 1">p1</a></li>
+            <li><a href="#Part 2">p2</a></li>
+          </ul>
+        </section>
+
+        <section class="part 3,4,5">
+            <div>
+            <h3>Linking to an element on the same page, Comments and Landmark roles</h3>
+            <p> link element to same page use # to id and a ref = <a href="#Part 1">link</a> </p>
+            <p> comment = not shwon on webpage but helps document html</p>
+            <!-- Comment right here and notes -->
+
+            <p> Landmark roles = help jump to specific sections on site</p>
+            <p> header role= banner</p>
+            <p> nav role= navigaiton</p>
+            <p> main role = main</p>
+            <p>aside role = complimentary</p>
+            <p>footer role = footer</p>
+
+            </div>
+        </section>
+
 </main>
