--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
                 <section id="part10">
 
                     <h3>links</h3>
-                    <ol>
+                    <p>default = a:link {color ###}</p>
+                    <p>visited = a:visited {color ###}</p>
+                    <p>hover = a:hover {color ###}</p>
+                    <p>focus = a:focus {color ###}</p>
+                
+                    <p>example:</p>
                     <p><li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">default</a></li></p>
-                    <p><li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">hover</a></li></p>
-                    <p><li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">visited</a></li></p>
-                    <p><li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">hover</a></li></p>
-                    </ol>
                     </section>
-                <!-- Add example in css -->
 
                 <section class="part11-12-13">
                     <div>
@@ -204,6 +204,6 @@
                     </section>
 </main>
 
-    <footer role="contentinfo">
+    <footer role="content">
     <p><small> @Add footer here at bottom page@</small></p>
     </footer>
